# mcp-database-query

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/connections/: __init__.py  mongodb.py  mysql.py  postgresql.py
src/helpers/: __init__.py  convert_objectids.py  mongodb_excecute.py  mysql_excecute.py  postgresql_execute.py
src/tools/: __init__.py  describe_table.py  list_databases.py  list_tables.py  run_query.py
